@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false

skinparam class {
    BackgroundColor #F8FBFF
    BorderColor #1F5F99
    ArrowColor #1F5F99
}

title Command Pattern - BlueWear Admin Actions

interface IAdminCommand {
    + Name : string
    + Description : string
    + Execute() : void
    + Undo() : void
}

class UpdateProductStockCommand {
    - product : StoreProduct
    - oldStock : int
    - newStock : int
    + Name : string
    + Description : string
    + Execute() : void
    + Undo() : void
}

class ChangeProductPriceCommand {
    - product : StoreProduct
    - oldPrice : decimal
    - newPrice : decimal
    + Name : string
    + Description : string
    + Execute() : void
    + Undo() : void
}

class AdminCommandInvoker {
    - history : Stack<IAdminCommand>
    + LastMessage : string
    + History : IReadOnlyList<IAdminCommand>
    + ExecuteCommand(command : IAdminCommand) : void
    + UndoLastCommand() : void
}

class StoreProduct {
    + Id : int
    + Name : string
    + Category : string
    + Price : decimal
    + StockQuantity : int
}

class StoreController {
    - CommandInvoker : AdminCommandInvoker
    + AdminCommands() : IActionResult
    + ExecuteStockCommand(id : int, stockQuantity : int) : IActionResult
    + ExecutePriceCommand(id : int, price : decimal) : IActionResult
    + UndoLastAdminCommand() : IActionResult
}

IAdminCommand <|.. UpdateProductStockCommand
IAdminCommand <|.. ChangeProductPriceCommand

UpdateProductStockCommand --> StoreProduct : modifies
ChangeProductPriceCommand --> StoreProduct : modifies

AdminCommandInvoker o-- IAdminCommand : stores history
StoreController ..> AdminCommandInvoker : uses
StoreController ..> IAdminCommand : creates commands

@enduml